# pyfilechecker

./: .gitignore  manage.py  pyproject.toml
checker/: analyzer.py  models.py  tasks.py
checker/api/: permissions.py  serializers.py  urls.py  views.py
checker/migrations/: 0001_initial.py
pyfilechecker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  header.html
templates/registration/: confirm_reset_password.html  email_confirm.html  email_reset_password_confirm.html  login.html  register.html  reset_password.html
user/: email.py  forms.py  models.py  tasks.py  urls.py  views.py
user/migrations/: 0001_initial.py
